force-app/main/default/objects/Job_Aplication__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <inlineHelpText>Candidato.</inlineHelpText>
    <label>Applicant</label>
    <referenceTo>Applicant__c</referenceTo>
    <relationshipLabel>Job Aplications</relationshipLabel>
    <relationshipName>Job_Aplications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>