force-app/main/default/objects/Job_Aplication__c/fields/Descripcion_del__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_del__c</fullName>
    <label>Descripcion</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>