force-app/main/default/objects/Job_Aplication__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <inlineHelpText>Posicion a la cual el candidato se postula.</inlineHelpText>
    <label>Position</label>
    <referenceTo>Positions__c</referenceTo>
    <relationshipLabel>Job Aplications</relationshipLabel>
    <relationshipName>Job_Aplications</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>