force-app/main/default/objects/Job_Aplication__c/validationRules/AbiertoCerrado.validationRule-meta.xml
<ValidationRule>
    <fullName>AbiertoCerrado</fullName>
    <active>true</active>
    <description>No se puede aplicar si la aplicacion esta cerrada</description>
    <errorConditionFormula>IF(TEXT(Position__r.Estado__c) = &quot;CERRADO&quot;, true, false)</errorConditionFormula>
    <errorMessage>No se puede aplicar si la aplicacion esta cerrada</errorMessage>
</ValidationRule>